--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1225,7 +1225,6 @@ footer p span {
 
 .card:hover:after {
   transform: rotate(10deg);
-  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
 }
 
 .card .imgBx {
@@ -1369,7 +1368,7 @@ footer p span {
   text-align: center;
   position: relative;
   padding-top: 50px;
-  min-height: 1400px;
+  min-height: 820px;
   width: 100%;
   margin: 0 auto;
   background: #f6f6f6;
@@ -1450,7 +1449,8 @@ footer p span {
   padding: 0 10px;
 }
 
-.multi_step_form #msform fieldset .fg_2, .multi_step_form #msform fieldset .fg_3 {
+.multi_step_form #msform fieldset .fg_2,
+.multi_step_form #msform fieldset .fg_3 {
   display: block;
   overflow: hidden;
 }
@@ -1459,7 +1459,8 @@ footer p span {
   padding-bottom: 70px;
 }
 
-.multi_step_form #msform fieldset .form-control, .multi_step_form #msform fieldset .product_select {
+.multi_step_form #msform fieldset .form-control,
+.multi_step_form #msform fieldset .product_select {
   display: inline;
   border-radius: 3px;
   border: 1px solid #d8e1e7;
@@ -1471,39 +1472,50 @@ footer p span {
   width: 30%;
 }
 
-.multi_step_form #msform fieldset .form-control.placeholder, .multi_step_form #msform fieldset .product_select.placeholder {
+.multi_step_form #msform fieldset .form-control.placeholder,
+.multi_step_form #msform fieldset .product_select.placeholder {
   color: #5f6771;
 }
 
-.multi_step_form #msform fieldset .form-control:-moz-placeholder, .multi_step_form #msform fieldset .product_select:-moz-placeholder {
+.multi_step_form #msform fieldset .form-control:-moz-placeholder,
+.multi_step_form #msform fieldset .product_select:-moz-placeholder {
   color: #5f6771;
 }
 
-.multi_step_form #msform fieldset .form-control::-moz-placeholder, .multi_step_form #msform fieldset .product_select::-moz-placeholder {
+.multi_step_form #msform fieldset .form-control::-moz-placeholder,
+.multi_step_form #msform fieldset .product_select::-moz-placeholder {
   color: #5f6771;
 }
 
-.multi_step_form #msform fieldset .form-control::-webkit-input-placeholder, .multi_step_form #msform fieldset .product_select::-webkit-input-placeholder {
+.multi_step_form #msform fieldset .form-control::-webkit-input-placeholder,
+.multi_step_form #msform fieldset .product_select::-webkit-input-placeholder {
   color: #5f6771;
 }
 
-.multi_step_form #msform fieldset .form-control:hover, .multi_step_form #msform fieldset .product_select:hover, .multi_step_form #msform fieldset .form-control:focus, .multi_step_form #msform fieldset .product_select:focus {
+.multi_step_form #msform fieldset .form-control:hover,
+.multi_step_form #msform fieldset .product_select:hover,
+.multi_step_form #msform fieldset .form-control:focus,
+.multi_step_form #msform fieldset .product_select:focus {
   border-color: #5cb85c;
 }
 
-.multi_step_form #msform fieldset .form-control:focus.placeholder, .multi_step_form #msform fieldset .product_select:focus.placeholder {
+.multi_step_form #msform fieldset .form-control:focus.placeholder,
+.multi_step_form #msform fieldset .product_select:focus.placeholder {
   color: transparent;
 }
 
-.multi_step_form #msform fieldset .form-control:focus:-moz-placeholder, .multi_step_form #msform fieldset .product_select:focus:-moz-placeholder {
+.multi_step_form #msform fieldset .form-control:focus:-moz-placeholder,
+.multi_step_form #msform fieldset .product_select:focus:-moz-placeholder {
   color: transparent;
 }
 
-.multi_step_form #msform fieldset .form-control:focus::-moz-placeholder, .multi_step_form #msform fieldset .product_select:focus::-moz-placeholder {
+.multi_step_form #msform fieldset .form-control:focus::-moz-placeholder,
+.multi_step_form #msform fieldset .product_select:focus::-moz-placeholder {
   color: transparent;
 }
 
-.multi_step_form #msform fieldset .form-control:focus::-webkit-input-placeholder, .multi_step_form #msform fieldset .product_select:focus::-webkit-input-placeholder {
+.multi_step_form #msform fieldset .form-control:focus::-webkit-input-placeholder,
+.multi_step_form #msform fieldset .product_select:focus::-webkit-input-placeholder {
   color: transparent;
 }
 
@@ -1613,7 +1625,8 @@ footer p span {
   padding-right: 10px;
 }
 
-.multi_step_form #msform fieldset .input-group .custom-file .custom-file-label:hover, .multi_step_form #msform fieldset .input-group .custom-file .custom-file-label:focus {
+.multi_step_form #msform fieldset .input-group .custom-file .custom-file-label:hover,
+.multi_step_form #msform fieldset .input-group .custom-file .custom-file-label:focus {
   background: #5cb85c;
   border-color: #5cb85c;
   color: #fff;
@@ -1703,7 +1716,8 @@ footer p span {
   font-size: 20px;
 }
 
-.multi_step_form #msform #progressbar li.active:before, .multi_step_form #msform #progressbar li.active:after {
+.multi_step_form #msform #progressbar li.active:before,
+.multi_step_form #msform #progressbar li.active:after {
   background: #005d83;
   color: white;
 }
@@ -1722,7 +1736,8 @@ footer p span {
   display: inline-block;
 }
 
-.multi_step_form #msform .action-button:hover, .multi_step_form #msform .action-button:focus {
+.multi_step_form #msform .action-button:hover,
+.multi_step_form #msform .action-button:focus {
   background: #005d83;
   border-color: #005d83;
 }
@@ -1733,7 +1748,8 @@ footer p span {
   border-color: #99a2a8;
 }
 
-.multi_step_form #msform .previous_button:hover, .multi_step_form #msform .previous_button:focus {
+.multi_step_form #msform .previous_button:hover,
+.multi_step_form #msform .previous_button:focus {
   background: #005d83;
   border-color: #005d83;
   color: #fff;
@@ -1815,7 +1831,8 @@ select:focus {
   transition: all 0.3s ease-in-out;
 }
 
-.tabs [class^=tab] [type=radio]:hover, .tabs [class^=tab] [type=radio]:focus,
+.tabs [class^=tab] [type=radio]:hover,
+.tabs [class^=tab] [type=radio]:focus,
 .tabs [class*=" tab"] [type=radio]:hover,
 .tabs [class*=" tab"] [type=radio]:focus {
   border-bottom: 1px solid var(--clr-accent);
@@ -1859,6 +1876,84 @@ select:focus {
 
 .tabs .tab-2:last-child [type=radio]:checked + div {
   margin-left: -100%;
+}
+
+.parent {
+  display: flex;
+  justify-content: right;
+  align-items: flex-start;
+  flex-direction: column;
+}
+
+._cards {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+._card {
+  margin: 40px;
+  position: relative;
+  max-width: 250px;
+  max-height: 350px;
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+  z-index: 10000;
+  cursor: pointer;
+}
+
+._card:hover {
+  margin: 40px;
+  position: relative;
+  max-width: 250px;
+  max-height: 350px;
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+  z-index: 10000;
+  cursor: pointer;
+  border: 2px solid rgba(58, 62, 61, 0.2);
+  border-radius: 0.5rem;
+}
+
+._card-title {
+  display: block;
+  text-align: center;
+  color: #fff;
+  background-color: var(--clr-secondary);
+  padding: 2%;
+  border-top-right-radius: 0.5rem;
+  border-top-left-radius: 0.5rem;
+}
+
+._card img {
+  width: 100%;
+  height: 98%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  display: block;
+  position: relative;
+  visibility: hidden;
+}
+
+._card-desc {
+  display: block;
+  font-size: 1.2rem;
+  position: absolute;
+  height: 0;
+  top: 0;
+  opacity: 0;
+  padding: 18px 8%;
+  background-color: var(--clr-primary);
+  overflow-y: scroll;
+  transition: 0.8s ease;
+}
+
+._card:hover ._card-desc {
+  opacity: 1;
+  height: 100%;
+}
+
+.parent ._cards ._card h2 {
+  color: var(--clr-accent);
 }
 
 .project-page-title h3 {
@@ -2527,7 +2622,7 @@ select:focus {
   position: relative;
 }
 
-#dynamic-content ul {
+#user-profile ul {
   list-style: none;
 }
 
@@ -2535,8 +2630,8 @@ select:focus {
   height: 10rem;
 }
 
-#dynamic-content h6 {
-  font-size: 1.1rem;
+#user-profile h6 {
+  font-size: 1.2rem;
   margin-top: 1rem;
 }
 
@@ -2545,8 +2640,7 @@ select:focus {
   margin-right: 1rem;
 }
 
-#user-profile span,
-#order span {
+#user-profile span {
   display: block;
 }
 
@@ -2559,27 +2653,6 @@ select:focus {
   font-size: 1.3rem;
   left: 3.5rem;
   display: inline-block;
-}
-
-#order ul {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-}
-
-#order a {
-  text-decoration: none;
-  color: var(--clr-secondary);
-  font-weight: 600;
-}
-
-.order-details:after {
-  font-family: "Font Awesome 5 Free";
-  content: "\f107";
-  color: var(--clr-dark);
-  font-weight: bold;
-  margin-right: 5px;
-  cursor: pointer;
 }
 
 /* Scroll Bar ----------------------------------------------------------- */
