--- a/public/css/home.css
+++ b/public/css/home.css
@@ -2998,6 +2998,10 @@ select:focus {
   margin: 1rem auto;
 }
 
+.modal-body form button {
+  width: 100%;
+}
+
 .modal-body input {
   background-color: #95a5a67c;
   border: 1px solid transparent;
