changed order details table style

--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -2349,6 +2349,65 @@ fieldset .container {
     margin: 0 auto 0.3rem auto;
     padding-bottom: 0.3rem;
 }
+.responsive-table li {
+    border-radius: 0.5rem;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 25px;
+}
+.responsive-table .table-header {
+    background-color: var(--clr-dark);
+    color: #f6f6f6;
+    
+}
+.responsive-table .table-row {
+    background-color: #fff;
+    box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.1);
+    
+}
+.responsive-table .col-1 {
+    flex-basis: 25%;
+   
+}
+.responsive-table .col-2 {
+    flex-basis: 30%;
+    
+}
+.responsive-table .col-3 {
+    flex-basis: 25%;
+    
+}
+.responsive-table .col-4 {
+    flex-basis: 20%;
+   
+}
+@media all and (max-width: 767px) {
+    .responsive-table .table-header {
+        display: none;
+   }
+    .responsive-table li {
+        display: block;
+   }
+    .responsive-table .col {
+        flex-basis: 100%;
+   }
+    .responsive-table .col {
+        display: flex;
+        padding: 10px 0;
+        justify-content: right;
+        min-width: 12rem;
+   }
+    .responsive-table .col:before {
+        color: #6c7a89;
+        padding-right: 10px;
+        content: attr(data-label);
+        flex-basis: 50%;
+        text-align: right;
+   }
+   
+}
+
 /* Scroll Bar ----------------------------------------------------------- */
 /* width */
 ::-webkit-scrollbar {
