--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -2371,7 +2371,7 @@ fieldset .container {
    
 }
 .responsive-table .col-2 {
-    flex-basis: 30%;
+    flex-basis: 25%;
     
 }
 .responsive-table .col-3 {
@@ -2379,8 +2379,13 @@ fieldset .container {
     
 }
 .responsive-table .col-4 {
-    flex-basis: 20%;
+    flex-basis: 25%;
    
+}
+#recipt-print {
+    display: flex;
+    justify-self: end;
+    margin: 1rem auto;
 }
 @media all and (max-width: 767px) {
     .responsive-table .table-header {
