--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -2367,19 +2367,23 @@ fieldset .container {
     
 }
 .responsive-table .col-1 {
-    flex-basis: 25%;
+    flex-basis: 20%;
    
 }
 .responsive-table .col-2 {
-    flex-basis: 25%;
+    flex-basis: 20%;
     
 }
 .responsive-table .col-3 {
-    flex-basis: 25%;
+    flex-basis: 20%;
     
 }
 .responsive-table .col-4 {
-    flex-basis: 25%;
+    flex-basis: 20%;
+   
+}
+.responsive-table .col-5 {
+    flex-basis: 20%;
    
 }
 #recipt-print {
