--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -1166,8 +1166,6 @@ footer p span {
 
 
 
-
-
 #heading {
     text-transform: uppercase;
     color: var(--clr-secondary);
@@ -1603,6 +1601,62 @@ fieldset .container {
     overflow: visible;
 }
 
+
+
+// ************ pricing Btn************
+
+
+/* CSS */
+.button{
+    letter-spacing: 0.1em;
+    cursor: pointer;
+    font-weight: 600;
+    line-height: 41px;
+    // max-width: 130px;
+    position: relative;
+    text-decoration: none;
+    text-transform: uppercase;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0.5rem;
+    background-color: var(--clr-secondary);
+    color: var(--clr-primary);
+}
+.button:focus {
+    box-shadow: none;
+    outline: none;
+}
+.button:hover {
+    text-decoration: none;
+}
+
+.pricing-box-Shadow{
+    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+    border-radius: 0.5rem;
+}
+
+.custom-boder-pricing{
+border: 1px solid var(--clr-accent);
+
+}
+
+.form-select{
+    width: 50%;
+}
+
+
+.custom-margin-pricing{
+    margin: 140px 0 40px 0;
+}
+
+.text-justify{text-align:justify}
+
+
+
+
+
 /* BREAKPOINTS ----- */
 @media screen and (max-width: 767px) {
     .tabs {
@@ -1615,7 +1669,9 @@ fieldset .container {
         min-height: 580px;
     }
     .tabby-tab label {
-        height: 60px;
+        height: 45px;
+        font-size: 13px;
+        padding: 8px;
     }
     .tabby-content {
         top: 60px;
@@ -2746,3 +2802,16 @@ fieldset .container {
     width:100%;
     position:absolute;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
