--- a/resources/scss/home/home.scss
+++ b/resources/scss/home/home.scss
@@ -1200,30 +1200,9 @@ footer p span {
     display: none;
 }
 
-#msform input,
-#msform textarea {
-    padding: 8px 15px 8px 15px;
-    border: 1px solid #ccc;
-    border-radius: 0px;
-    margin-bottom: 25px;
-    margin-top: 2px;
-    width: 100%;
-    box-sizing: border-box;
-    font-family: montserrat;
-    color: #2c3e50;
-    background-color: #eceff1;
-    font-size: 16px;
-    letter-spacing: 1px;
-}
 
-#msform input:focus,
-#msform textarea:focus {
-    -moz-box-shadow: none !important;
-    -webkit-box-shadow: none !important;
-    box-shadow: none !important;
-    border: 1px solid #673ab7;
-    outline-width: 0;
-}
+
+
 
 #msform .action-button {
     width: 100px;
@@ -1347,17 +1326,17 @@ background-color: var(--clr-dark);
 
 #progressbar #account:before {
     font-family: FontAwesome;
-    content: "\f13e";
+    content: "\f666";
 }
 
 #progressbar #personal:before {
     font-family: FontAwesome;
-    content: "\f007";
+    content: "\f3c5";
 }
 
 #progressbar #payment:before {
     font-family: FontAwesome;
-    content: "\f030";
+    content: "\f3d1";
 }
 
 #progressbar #confirm:before {
@@ -1654,9 +1633,24 @@ border: 1px solid var(--clr-accent);
 .text-justify{text-align:justify}
 
 
+.title-style{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 700;
+    font-size: 20px;
+    color: hsl(52, 0%, 98%);
+    }
+    .title-quote{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 400;
+    color: hsl(52, 0%, 98%);
+    }
 
 
 
+.float-right{
+    float: right;
+}
+// ***********************end pricing page ******************************
 /* BREAKPOINTS ----- */
 @media screen and (max-width: 767px) {
     .tabs {
